--- a/index.html
+++ b/index.html
@@ -6,39 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="assets/style.css">
+    <link href="style.css" rel="stylesheet" type="assets/css,/style.css">
+    <style>
+        h1 {
+            color: blue;
+            font-size: xx-large;
 
+        }
+
+        h2 {
+            color: darkgrey;
+            font-size: x-large;
+            font-family: sans-serif;
+
+        }
+
+        p {
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+        }
+
+        header {
+            width: 300px;
+            border: 15px solid green;
+            padding: 50px;
+            margin: 20px;
+        }
+
+        section {
+            width: 300px;
+            border: 15px solid darkgray;
+            padding: 50px;
+            margin: 20px;
+        }
+
+    </style>
 </head>
 
 <body>
     <header>
         <h1>Student Bio</h1>
     </header>
-    <div class="container">
 
-        <section id="main-bio">
 
-            <h2>Emeka Nwadiogbu, Jr.</h2>
-            <img id="bio-image"
-                src="C:\Users\TenToez\code\Homework\Basic-Repository\Assets\images\10933707_852927704783267_8288948264894947996_n.jpg"
-                alt="Emeka Nwadiogbu, Jr.">
+    <h2>Emeka Nwadiogbu, Jr.</h2>
+    <img id="bio-image"
+        src="C:\Users\TenToez\code\Homework\Basic-Repository\Assets\images\10933707_852927704783267_8288948264894947996_n.jpg"
+        alt="Emeka Nwadiogbu, Jr.">
 
 
 
-    </div>
-    <nav>
-        <p>Portfolio Site</p>
-    </nav>
+    <h1>Portfolio Site</h1>
+
     <section>
         <p>As a business finance consultant, Emeka Nwadiogbu, Jr. has learned that the true secret to success is
-            becoming a continuous learner. In life, and business, people and market trends change drastically, and the
+            becoming a continuous learner. In life, and business, people and market trends change drastically. The
             only characteristic that is keeping the top Dow Jones organizations amongst the leaders of the corporate
-            world is they're habitual obcession in innovation and re-education.</p>
+            world is their habitual obcession in innovation and re-education.</p>
     </section>>
     <section id="contact-info" <p>Contact Info</p>
         <ul>
             <li><strong>Email:</strong> <a href="#">create@odumfilm.com</a></li>
-            <li><strong>GitHub:</strong> <a href="@enwadiogbu" </a> </li> <li>strong>Portfolio:</strong> <a
+            <li><strong>GitHub:</strong> <a href="@enwadiogbu" </a> </li> <li><strong>Portfolio:</strong> <a
                         href="Coming Soon" </a> </a> </li> </ul> </section> <p>Paragraph</p>
                         </article>
     </section>
