Assignment1 done by the end of class

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="assets/css,/style.css">
+    <link href="Assets/css/style.css" rel="stylesheet">
+
     <style>
         h1 {
             color: blue;
@@ -27,10 +28,11 @@
         }
 
         header {
+            float: left;
             width: 300px;
-            border: 15px solid green;
-            padding: 50px;
-            margin: 20px;
+            border: 5px solid green;
+            padding: 25px;
+            margin: auto;
         }
 
         section {
@@ -39,28 +41,27 @@
             padding: 50px;
             margin: 20px;
         }
-
     </style>
 </head>
 
 <body>
-    <header>
-        <h1>Student Bio</h1>
-    </header>
-
-
-    <h2>Emeka Nwadiogbu, Jr.</h2>
+    <h2 class="floatname">Emeka Nwadiogbu, Jr.</h2>
     <img id="bio-image"
         src="C:\Users\TenToez\code\Homework\Basic-Repository\Assets\images\10933707_852927704783267_8288948264894947996_n.jpg"
         alt="Emeka Nwadiogbu, Jr.">
+    <header  class="inline">
+        <h1 class="center floatterm">Student Bio</h1>
+    </header>
+
+
 
 
 
     <h1>Portfolio Site</h1>
 
     <section>
-        <p>As a business finance consultant, Emeka Nwadiogbu, Jr. has learned that the true secret to success is
-            becoming a continuous learner. In life, and business, people and market trends change drastically. The
+        <p class="bio">As a business finance consultant, Emeka Nwadiogbu, Jr. has learned that the true secret to
+            success is becoming a continuous learner. In life, and business, people and market trends change drastically. The
             only characteristic that is keeping the top Dow Jones organizations amongst the leaders of the corporate
             world is their habitual obcession in innovation and re-education.</p>
     </section>>
